<resources>
    <string name="app_name">TimePower</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_time_table">EditTimeTable</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="dialog_add_element_title">Title</string>
    <string name="dialog_add_element_sub_title">Subtitle</string>

    <string name="web_client_id">35789524147-9iqjtbksv9p7icc0uk2s9el5kk8rsh30.apps.googleusercontent.com</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_home_page">TimePower</string>
    <string name="nav_view_time_table">TimeTable</string>
    <string name="nav_edit_time_table">Edit TimeTable</string>
    <string name="nav_notif">Notify</string>
    <string name="nav_add_fr">Add Friends</string>
    <string name="nav_request">Requests</string>
    <string name="nav_my_friends">My Friends</string>
    <string name="nav_free_friends">Free Friends</string>

    <string name="today">Today</string>
    <string name="long_to_call">Tap and hold to make call</string>
    <string name="no_requests">There are no pending requests.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_logout">Logout</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. <u>Login Me!</u></string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string-array name="days_array">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

</resources>
