<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:checked="true"
            android:id="@+id/nav_view_time_table"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/nav_view_time_table"/>
        <item android:title="@string/nav_my_profile"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:id="@+id/nav_my_profile"/>
        <item android:id="@+id/nav_home_page"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/nav_home_page"/>
        <item android:title="Social">
            <menu>
                <group android:checkableBehavior="single">
                    <item android:title="@string/nav_add_fr"
                        android:id="@+id/nav_add_fr"/>
                    <item android:title="@string/nav_my_friends"
                        android:id="@+id/nav_my_fr"/>
                    <item android:title="@string/nav_request"
                        android:id="@+id/nav_requests"/>
                    <!--<item android:id="@+id/nav_free_fr"-->
                        <!--android:title="@string/nav_free_friends"/>-->
                </group>
            </menu>
        </item>
    </group>

</menu>
